<resources>
    <string name="app_name">Project2</string>
    <string name="nav_drawer_logo">ND Logo</string>
    <string name="nav_title">ND Title</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="extra">EXTRA</string>
    <string name="sBanner">Banner</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="todo">TODO</string>
    <string name="item1">Master/Detail</string>
    <string name="item2">ViewPager</string>
    <string name="item3">NavDrawer</string>
    <string name="item4">Rand</string>
</resources>